--- a/src/monolith-app/tsconfig.build.json
+++ b/src/monolith-app/tsconfig.build.json
@@ -1,13 +1,7 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "sourceMap": true,
-    "outDir": "../dist",
-    "skipLibCheck": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
     "declaration": false,
     "removeComments": true
   },
@@ -16,6 +10,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "test",
+    "**/*spec.ts"
   ]
 }
