feat: Task 2 - Configure DynamoDB Connection
✅ Implement comprehensive DynamoDB connection service
- Create DynamoDBService with full CRUD operations for franchise and store tables
- Support for both simple (franchise) and composite (tenant) key structures
- AWS SDK v3 integration with DynamoDB Document Client
- Connection health checks and error handling
- Multi-environment configuration support (dev/staging/prod)

✅ Enhance AWS configuration
- Extended aws.config.ts with comprehensive DynamoDB settings
- Table naming patterns matching existing Lambda functions
- Environment suffix logic for table names
- Connection timeout and retry configurations
- Verified Permissions preparation for future authorization

✅ Update environment configuration
- Enhanced .env.example with all DynamoDB configurations
- Updated .env.development with local DynamoDB settings
- Support for DynamoDB Local endpoint configuration

✅ Integrate database module
- Created global DatabaseModule for dependency injection
- Updated AppModule to include DynamoDB connection
- Enhanced health checks with database connectivity tests
- Proper service initialization and logging

✅ Verification complete
- All health endpoints functional: /health, /health/app, /health/database
- DynamoDB service initializes correctly
- Application builds and runs without errors
- Compatible with existing Lambda function table structures

Task 2 Complete: NestJS monolith now has full DynamoDB connectivity matching the existing serverless architecture patterns.

--- a/src/monolith-app/.env.example
+++ b/src/monolith-app/.env.example
@@ -11,12 +11,26 @@ APP_VERSION=1.0.0
 
 # AWS Configuration
 AWS_REGION=us-east-1
+TABLE_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_access_key_here
 AWS_SECRET_ACCESS_KEY=your_secret_key_here
 
+# Environment suffix for table names (matching Lambda pattern)
+ENV=development
+
 # DynamoDB Configuration
 DYNAMODB_ENDPOINT=http://localhost:8000
+DYNAMODB_LOCAL_ENDPOINT=http://localhost:8000
 DYNAMODB_TABLE_PREFIX=dev
+USE_LOCAL_DYNAMODB=true
+
+# DynamoDB Connection Settings
+DYNAMODB_MAX_RETRIES=3
+DYNAMODB_TIMEOUT=30000
+
+# Table Names (will have ENV suffix applied)
+FRANCHISE_TABLE_NAME=petstoreFranchise
+TENANTS_TABLE_NAME=petstoreTenants
 
 # Authentication Configuration
 JWT_SECRET=your_jwt_secret_here_change_in_production
@@ -35,6 +49,11 @@ LOG_FORMAT=combined
 HEALTH_CHECK_TIMEOUT=5000
 HEALTH_CHECK_INTERVAL=30000
 
-# Database Tables (from existing Lambda functions)
-FRANCHISE_TABLE_NAME=petstoreFranchise
-TENANTS_TABLE_NAME=petstoreTenants
+# AWS Verified Permissions (for future authorization implementation)
+AVP_POLICY_STORE_ID=your_policy_store_id_here
+AVP_IDENTITY_SOURCE=your_identity_source_here
+AVP_REGION=us-east-1
+
+# CloudWatch Configuration
+CLOUDWATCH_LOG_GROUP=/aws/lambda/petstore-monolith
+CLOUDWATCH_LOG_STREAM=development
