--- a/src/monolith-app/.env.development
+++ b/src/monolith-app/.env.development
@@ -1,7 +1,4 @@
-# Environment Configuration Templates
-
-# Copy this file to .env.development, .env.staging, or .env.production
-# and fill in your actual values
+# Development Environment Configuration
 
 # Application Configuration
 NODE_ENV=development
@@ -11,15 +8,29 @@ APP_VERSION=1.0.0
 
 # AWS Configuration
 AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_access_key_here
-AWS_SECRET_ACCESS_KEY=your_secret_key_here
+TABLE_REGION=us-east-1
+AWS_ACCESS_KEY_ID=localstack
+AWS_SECRET_ACCESS_KEY=localstack
+
+# Environment suffix for table names (matching Lambda pattern)
+ENV=dev
 
 # DynamoDB Configuration
 DYNAMODB_ENDPOINT=http://localhost:8000
+DYNAMODB_LOCAL_ENDPOINT=http://localhost:8000
 DYNAMODB_TABLE_PREFIX=dev
+USE_LOCAL_DYNAMODB=true
+
+# DynamoDB Connection Settings
+DYNAMODB_MAX_RETRIES=3
+DYNAMODB_TIMEOUT=30000
+
+# Table Names (will have ENV suffix applied)
+FRANCHISE_TABLE_NAME=petstoreFranchise
+TENANTS_TABLE_NAME=petstoreTenants
 
 # Authentication Configuration
-JWT_SECRET=your_jwt_secret_here_change_in_production
+JWT_SECRET=development_secret_key_change_in_production
 JWT_EXPIRES_IN=7d
 AUTH_ISSUER=petstore-app
 
@@ -35,6 +46,11 @@ LOG_FORMAT=combined
 HEALTH_CHECK_TIMEOUT=5000
 HEALTH_CHECK_INTERVAL=30000
 
-# Database Tables (from existing Lambda functions)
-FRANCHISE_TABLE_NAME=petstoreFranchise
-TENANTS_TABLE_NAME=petstoreTenants
+# AWS Verified Permissions (for future authorization implementation)
+AVP_POLICY_STORE_ID=development_policy_store
+AVP_IDENTITY_SOURCE=development_identity_source
+AVP_REGION=us-east-1
+
+# CloudWatch Configuration
+CLOUDWATCH_LOG_GROUP=/aws/lambda/petstore-monolith
+CLOUDWATCH_LOG_STREAM=development
