--- a/src/monolith-app/package.json
+++ b/src/monolith-app/package.json
@@ -22,43 +22,45 @@
     "docker:down": "docker-compose -f docker-compose.dev.yml down"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.454.0",
+    "@aws-sdk/credential-providers": "^3.454.0",
+    "@aws-sdk/lib-dynamodb": "^3.454.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/terminus": "^10.2.0",
-    "@nestjs/passport": "^10.0.2",
-    "@nestjs/jwt": "^10.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "@aws-sdk/client-dynamodb": "^3.454.0",
-    "@aws-sdk/lib-dynamodb": "^3.454.0",
-    "@aws-sdk/credential-providers": "^3.454.0",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "uuid": "^9.0.1",
-    "compression": "^1.7.4",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.7",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "aws-sdk-client-mock": "^3.0.0",
+    "aws-sdk-client-mock-jest": "^3.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -70,9 +72,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "aws-sdk-client-mock": "^3.0.0",
-    "aws-sdk-client-mock-jest": "^3.0.0"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
