--- a/src/monolith-app/package.json
+++ b/src/monolith-app/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^10.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -42,6 +43,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -72,7 +74,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.102.1"
   },
   "jest": {
     "moduleFileExtensions": [
