feat: Complete Task 12 - Production Deployment Configuration
✨ Production deployment infrastructure implemented
🐳 Docker containerization with multi-stage builds
📊 Comprehensive monitoring with Prometheus/Grafana
🔒 Security hardening with Nginx reverse proxy
☁️ AWS deployment automation scripts
🚀 CI/CD pipeline with GitHub Actions

Production Features:
- Multi-stage Docker builds with security optimization
- Complete monitoring stack (Prometheus, Grafana, Node Exporter)
- Load balancing and SSL termination with Nginx
- AWS EC2 deployment automation with CloudWatch alarms
- Environment configuration templates for production
- CI/CD pipeline with testing, security scanning, and deployments

Infrastructure Components:
- Container orchestration with docker-compose
- Metrics collection and alerting
- Performance dashboards and monitoring
- Rate limiting and security headers
- Automated deployment scripts
- Health checks and container management

Migration Completion:
🎯 All 12 tasks completed successfully
✅ Complete FaaS to IaaS migration framework
🏗️ Production-ready deployment configuration
📈 Enterprise-grade monitoring and observability
🔄 Automated CI/CD pipeline implementation

Files: 11 new production deployment files created

--- a/src/monolith-app/.env.example
+++ b/src/monolith-app/.env.example
@@ -57,3 +57,42 @@ AVP_REGION=us-east-1
 # CloudWatch Configuration
 CLOUDWATCH_LOG_GROUP=/aws/lambda/petstore-monolith
 CLOUDWATCH_LOG_STREAM=development
+
+# ========================================
+# PRODUCTION ENVIRONMENT CONFIGURATION
+# ========================================
+
+# Production Application Configuration
+# NODE_ENV=production
+# PORT=3000
+
+# Production AWS Configuration
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your-production-access-key-id
+# AWS_SECRET_ACCESS_KEY=your-production-secret-access-key
+
+# Production DynamoDB Configuration
+# DYNAMODB_FRANCHISE_TABLE=petstoreFranchise
+# DYNAMODB_STORE_TABLE=petstoreTenants
+
+# Production Authentication Configuration
+# JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# JWT_EXPIRATION=24h
+# API_KEY=your-api-key-for-admin-endpoints
+
+# Production Monitoring Configuration
+# LOG_LEVEL=info
+# METRICS_ENABLED=true
+
+# Production Grafana Configuration
+# GRAFANA_ADMIN_USER=admin
+# GRAFANA_ADMIN_PASSWORD=change-this-password
+
+# Optional: Database Backup Configuration
+# BACKUP_ENABLED=true
+# BACKUP_SCHEDULE=0 2 * * *  # Daily at 2 AM
+
+# Optional: SSL Configuration
+# SSL_ENABLED=true
+# SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+# SSL_KEY_PATH=/etc/nginx/ssl/key.pem
