feat: Add security policies and environment configuration template
- Add SECURITY.md with comprehensive security practices for environment variables
- Add .env.example template with all required variables for testing
- Establish foundation for secure credential management in load testing
- Protect sensitive AWS credentials and API keys from being committed

This establishes the security foundation before adding load testing implementation.

--- a/scripts/load-testing/.env.example
+++ b/scripts/load-testing/.env.example
@@ -23,6 +23,29 @@ TEST_USER_2_PASSWORD=TempPassword123!
 TEST_MANAGER_USERNAME=manager1@example.com
 TEST_MANAGER_PASSWORD=TempPassword123!
 
+# FaaS vs IaaS Comparison Configuration
+FAAS_BASE_URL=https://your-api-gateway.execute-api.region.amazonaws.com/stage
+FAAS_AUTH_URL=https://cognito-idp.region.amazonaws.com/
+FAAS_CLIENT_ID=your_cognito_client_id
+FAAS_USERNAME=your_username
+FAAS_PASSWORD=your_password
+FAAS_ADMIN_API_KEY=your_admin_api_key
+
+# IaaS Environment Configuration
+IAAS_BASE_URL=http://localhost:3000/api/v1
+IAAS_EMAIL=your_email@domain.com
+IAAS_PASSWORD=your_iaas_password
+
+# Smoke Test Configuration (uses FaaS variables by default)
+SMOKE_TEST_BASE_URL=https://your-api-gateway.execute-api.region.amazonaws.com/stage
+SMOKE_TEST_API_KEY=your_admin_api_key
+
+# Performance Expectations (optional overrides)
+FAAS_P50_EXPECTED=2000
+FAAS_P95_EXPECTED=4000
+IAAS_P50_EXPECTED=100
+IAAS_P95_EXPECTED=300
+
 # Environment-specific URLs (optional)
 STAGING_API_URL=https://staging-api.petstore.com
 PRODUCTION_API_URL=https://api.petstore.com
