feat: Add secure smoke test implementation
- Add simple-smoke-test.js with environment variable security
- Add smoke-test.json with optimized 1-iteration configuration
- Add run-smoke-simple.ps1 PowerShell script for easy execution
- Update .gitignore to allow config files while blocking result files
- Implement validation for required environment variables
- Reduce smoke test execution from 5+ minutes to ~2 seconds

Smoke test validates API connectivity without exposing credentials in source code.
Follows security practices defined in SECURITY.md.

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,16 @@ node_modules/
 .env.production
 .env.development
 
-# K6 test results
+# K6 test results and output files
 scripts/load-testing/results/
-scripts/load-testing/*.json
+scripts/load-testing/*-results*.json
+scripts/load-testing/test-results-*.json
+scripts/load-testing/*-output*.json
 scripts/load-testing/*.xml
+
+# Exclude configuration files from ignore (allow them)
+!scripts/load-testing/smoke-test.json
+!scripts/load-testing/*-config.json
 
 # Logs
 *.log
