fix(smoke-test): add JWT environment variable for authentication

--- a/scripts/load-testing/.env.example
+++ b/scripts/load-testing/.env.example
@@ -1,3 +1,4 @@
+TEST_JWT=
 # K6 Load Testing Environment Variables
 # Copy this file to .env and update with your actual values
 
@@ -53,3 +54,14 @@ PRODUCTION_API_URL=https://api.petstore.com
 # K6 Cloud Configuration (optional)
 K6_CLOUD_PROJECT_ID=your-k6-cloud-project-id
 K6_CLOUD_TOKEN=your-k6-cloud-token
+
+# Test Environment Settings
+# Set to 'development', 'staging', or 'production' for different thresholds
+NODE_ENV=development
+
+# Load Test Specific Configuration
+# Adjust these for different test intensities
+LOAD_TEST_MAX_VUS=25
+LOAD_TEST_DURATION=5m
+STRESS_TEST_MAX_VUS=50
+SPIKE_TEST_MAX_VUS=100
