Add load and functional tests for existing Lambda routes
- Add k6 script `load-existing-route.js` with Cognito authentication and API Key, simulating concurrent users and validating SLA.
- Add functional script `test-existing-route.js` to test integration and authentication on real Lambda endpoint.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ scripts/load-testing/*.xml
 !scripts/load-testing/smoke-test.json
 !scripts/load-testing/*-config.json
 
+# Script sensible con credenciales
+scripts/get-jwt-token.sh
+
 # Logs
 *.log
 logs/
